sdm660-common: ESX: A3x: Set Opengles version from vendor init context
Since ro.opengles.version can only be set from
vendor init context, modified to set this property from
init.qcom.rc that runs in vendor_init context.

CRs-Fixed: 2283831
Change-Id: I1209f11086f529430371512646ee5a107e9f03ef

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1138,6 +1138,10 @@ service time_daemon /vendor/bin/time_daemon
 on property:vendor.rild.libpath=*
     setprop rild.libpath ${vendor.rild.libpath}
 
+#Set GPU Opengles version
+on property:vendor.opengles.version=*
+    setprop ro.opengles.version ${vendor.opengles.version}
+
 #Set gpu available frequencies property
 on property:vendor.gpu.available_frequencies=*
     setprop ro.vendor.gpu.available_frequencies ${vendor.gpu.available_frequencies}
