sdm660-common: vintf: Switch to new NXP NFC
Change-Id: Ida02ed063b0dd9ca50d330c188c823815dcfa00d

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -933,6 +933,12 @@ service fstman_wlan0 /vendor/bin/fstman -B -ddd -c /data/vendor/wifi/fstman.ini 
     disabled
     oneshot
 
+service nqnfcinfo /vendor/bin/nqnfcinfo
+    class late_start
+    group nfc
+    user system
+    oneshot
+
 service cnss_diag /vendor/bin/cnss_diag -q -f
     class main
     user system
