sdm660-common: vintf: Switch to new NXP NFC
Change-Id: Ida02ed063b0dd9ca50d330c188c823815dcfa00d

--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -30,8 +30,10 @@ MIFARE_READER_ENABLE=0x01
 VZW_FEATURE_ENABLE=0x00
 
 ###############################################################################
-# File name for Firmware
-NXP_FW_NAME="libpn553_fw.so"
+# Firmware file type
+#.so file   0x01
+#.bin file  0x02
+NXP_FW_TYPE=0x01
 
 ###############################################################################
 # System clock source selection configuration
