sdm660-commmon: init: qcom: Add vendor prefix for gpu frequencies
As per sepolicy add vendor prefix to vendor specific properties

Change-Id: I3b5281042f3bbf008bea58edb3d8bb08ea239302

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1137,4 +1137,4 @@ on property:vendor.rild.libpath=*
 
 #Set gpu available frequencies property
 on property:vendor.gpu.available_frequencies=*
-    setprop ro.gpu.available_frequencies ${vendor.gpu.available_frequencies}
+    setprop ro.vendor.gpu.available_frequencies ${vendor.gpu.available_frequencies}
