sdm660-common: fix permission denial for /sys/devices/virtual/graphics/fb0/idle_time
Change-Id: I9a7b2c26ed36f31a91e10a836b94a9da642fceb9

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -67,6 +67,9 @@ on boot
     chown system system /dev/goodix_fp
     chmod 0644          /dev/goodix_fp
 
+    chmod 0664 /sys/devices/virtual/graphics/fb0/idle_time
+    chown system graphics /sys/devices/virtual/graphics/fb0/idle_time
+
 #Load WLAN driver
    setprop wlan.driver.status "ok"
 
