--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -108,13 +108,6 @@ service adsprpcd /vendor/bin/adsprpcd audiopd
    user media
    group media
 
-service imsdatadaemon /vendor/bin/imsdatadaemon
-    class main
-    user system
-    socket ims_datad stream 0660 system radio
-    group system wifi radio inet log diag
-    disabled
-
 service energy-awareness /vendor/bin/energy-awareness
     class main
     user system
@@ -124,20 +117,37 @@ service energy-awareness /vendor/bin/energy-awareness
 service pd_mapper /vendor/bin/pd-mapper
      class core
 
-on property:vendor.ims.QMI_DAEMON_STATUS=1
-    start imsdatadaemon
+service imsdatadaemon /vendor/bin/imsdatadaemon
+   class main
+   user system
+   socket ims_datad stream 0660 system radio
+   group system wifi radio inet log diag
+   disabled
+   writepid /dev/cpuset/system-background/tasks
+
+service imsqmidaemon /vendor/bin/imsqmidaemon
+   class main
+   user system
+   socket ims_qmid stream 0660 system radio
+   group radio log diag
+   writepid /dev/cpuset/system-background/tasks
 
 service ims_rtp_daemon /vendor/bin/ims_rtp_daemon
    class main
    user system
    group radio diag inet log
    disabled
+   writepid /dev/cpuset/system-background/tasks
 
 service vendor.imsrcsservice /vendor/bin/imsrcsd
    class main
    user system
    group radio diag inet log
    disabled
+   writepid /dev/cpuset/system-background/tasks
+
+on property:vendor.ims.QMI_DAEMON_STATUS=1
+    start imsdatadaemon
 
 on property:vendor.ims.DATA_DAEMON_STATUS=1
     start ims_rtp_daemon
