--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -55,10 +55,10 @@ on post-fs-data
     mkdir /data/tombstones/dsps 0771 system system
     mkdir /persist/qti_fp 0700 system system
     mkdir /data/misc/seemp 0700 system system
-    mkdir /data/misc/tloc 0700 system drmrpc
+    mkdir /data/vendor/tloc 0700 system drmrpc
 
 on boot
-    start rmt_storage
+    start vendor.rmt_storage
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/foreground/cpus 0-7
     write /dev/cpuset/foreground/boost/cpus 0-7
@@ -70,26 +70,29 @@ on boot
 #Load WLAN driver
    setprop wlan.driver.status "ok"
 
+#Create folder dump yuv images while debugging
+    mkdir /data/vendor/camera 0770 camera camera
+
 #Peripheral manager
-service per_mgr /vendor/bin/pm-service
+service vendor.per_mgr /vendor/bin/pm-service
     class core
     user system
     group system
     ioprio rt 4
 
-service per_proxy /vendor/bin/pm-proxy
+service vendor.per_proxy /vendor/bin/pm-proxy
     class core
     user system
     group system
     disabled
 
-on property:init.svc.per_mgr=running
-    start per_proxy
+on property:init.svc.vendor.per_mgr=running
+    start vendor.per_proxy
 
 on property:sys.shutdown.requested=*
-    stop per_proxy
+    stop vendor.per_proxy
 
-service qseecomd /vendor/bin/qseecomd
+service vendor.qseecomd /vendor/bin/qseecomd
    class core
    user root
    group root
@@ -114,10 +117,10 @@ service energy-awareness /vendor/bin/energy-awareness
     group system
     oneshot
 
-service pd_mapper /vendor/bin/pd-mapper
+service vendor.pd_mapper /vendor/bin/pd-mapper
      class core
 
-service imsdatadaemon /vendor/bin/imsdatadaemon
+service vendor.imsdatadaemon /vendor/bin/imsdatadaemon
    class main
    user system
    socket ims_datad stream 0660 system radio
@@ -132,7 +135,7 @@ service imsqmidaemon /vendor/bin/imsqmidaemon
    group radio log diag
    writepid /dev/cpuset/system-background/tasks
 
-service ims_rtp_daemon /vendor/bin/ims_rtp_daemon
+service vendor.ims_rtp_daemon /vendor/bin/ims_rtp_daemon
    class main
    user system
    group radio diag inet log
@@ -156,7 +159,7 @@ on property:vendor.ims.DATA_DAEMON_STATUS=1
 on charger
     load_system_props
     start qcom-post-boot
-    start hvdcp_opti
+    start vendor.hvdcp_opti
     setprop sys.usb.configfs 1
 
 service qfp-daemon /vendor/bin/qfp-daemon
