sdm660-common: Fixup sensors.qti group
Change-Id: Ide9750bfbe89c29cf127f68e22656f46546c5b3e

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -858,8 +858,8 @@ service vendor.dataadpl /vendor/bin/adpl
 
 service vendor.sensors.qti /vendor/bin/sensors.qti
     class core
-    user root
-    group root
+    user system
+    group system
     disabled
 
 on property:ro.vendor.use_data_netmgrd=false
