sdm660-common: Add FM support
Change-Id: I64dde3d00a981fa238e9eab97e2e45c22065ae41

--- a/configs/nfc/libnfc-nci.conf
+++ b/configs/nfc/libnfc-nci.conf
@@ -51,6 +51,15 @@ AID_FOR_EMPTY_SELECT={08:A0:00:00:01:51:00:00:00}
 SCREEN_OFF_POWER_STATE=1
 
 ###############################################################################
+# Firmware patch format, Only 1 and 5 should be set
+#   0 -> NFC Default
+#   1 -> EMVCO Default
+#   3 -> EMVCO Polling, DISC_IDLE = POWER_OFF, DISC DEACTIVATE =  Removal process
+#   5 -> EMVCO Cert Polling, DISC_IDLE = Removal process  , DISC DEACTIVATE =   POWER_OFF
+#   7 -> EMVCO Polling, DISC_IDLE = POWER_OFF, DISC DEACTIVATE =  POWER_OFF
+NFA_CONFIG_FORMAT=1
+
+###############################################################################
 # Default poll duration (in ms)
 #  The defualt is 500ms if not set (see nfc_target.h)
 #NFA_DM_DISC_DURATION_POLL=333
@@ -84,14 +93,14 @@ POLLING_TECH_MASK=0xEF
 # NFA_TECHNOLOGY_MASK_F	            0x04    /* NFC Technology F             */
 # NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
 # NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-P2P_LISTEN_TECH_MASK=0xC5
+P2P_LISTEN_TECH_MASK=0xC4
 
 PRESERVE_STORAGE=0x01
 
 ###############################################################################
 # Deactivate notification wait time out in seconds used in ETSI Reader mode
 # 0 - Infinite wait
-NFA_DM_DISC_NTF_TIMEOUT=100
+NFA_DM_DISC_NTF_TIMEOUT=0
 
 ###############################################################################
 # AID_MATCHING constants
@@ -100,4 +109,4 @@ NFA_DM_DISC_NTF_TIMEOUT=100
 # AID_MATCHING_PREFIX_ONLY 0x02
 AID_MATCHING_MODE=0x01
 
-#################################################################################
+###############################################################################
