sdm660-common: Update WiFi configs from P
Change-Id: Iae6d86eab8d1d360eb9430d285c9474f2bb51da6

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -224,7 +224,7 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=1
+gEnablePowerSaveOffload=2
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -444,19 +444,6 @@ gEnableFlowSteering=1
 gEnableNanSupport=1
 ################ NAN feature set end #####################
 
-#Action OUIs for 1x1 connection
-#Please do not remove the default values, append new OUIs in the end
-#Default=000C43 00 25 42 001018 06 02FFF02C0000 BC 25 42 001018 06 02FF040C0000 BC 25 42 00037F 00 35 6C
-gActionOUIConnect1x1=000C43 00 25 42 001018 06 02FFF02C0000 BC 25 42 001018 06 02FF040C0000 BC 25 42 00037F 00 35 6C
-
-#Action OUIs for ITO extension
-#Please do not remove the default values, append new OUIs in the end
-#Default=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01
-gActionOUIITOExtension=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01
-
-# Change suggested by Qualcomm to fix SDMS-6158
-arp_ac_category=0
-
 # Change between 5GHz and 2,4GHz
 # Default is 512. Which means consicutive 512 packets failed it issue disconnection.
 gDroppedPktDisconnectTh=128
@@ -465,6 +452,10 @@ gRoamBmissFirstBcnt=3
 # Default 20. when 20 beacons are missed final_bmiss is triggered.
 gRoamBmissFinalBcnt=5
 
+# Change suggested by Qualcomm to fix SDHM1730-11977
+gindoor_channel_support=1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
+
