--- a/wifi/fstman.ini
+++ b/wifi/fstman.ini
@@ -3,7 +3,7 @@ ctrl_iface=/data/vendor/wifi/hostapd/global
 groups=bond0
 
 [bond0]
-interfaces=wlan0
+interfaces=wlan0,wigig0
 mux_type=bonding
 mux_ifname=bond0
 mux_managed=1
@@ -15,3 +15,10 @@ rate_upgrade_acl_file=/data/vendor/wifi/fst_rate_upgrade.accept
 [wlan0]
 priority=100
 default_llt=3600
+
+[wigig0]
+priority=110
+wpa_group=GCMP
+wpa_pairwise=GCMP
+hw_mode=ad
+channel=2
