sdm660-common: Update import file name
Forgotten here: 68a43f

Change-Id: I3e4a416a5e767f76764476ea32c9222789544262

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -25,7 +25,7 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-import /vendor/etc/init/hw/init.zangya.usb.rc
+import /vendor/etc/init/hw/init.qcom.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
