--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -943,6 +943,12 @@ service adsprpcd /vendor/bin/adsprpcd audiopd
     user media
     group media
 
+service vendor.cdsprpcd /vendor/bin/cdsprpcd
+    class main
+    user system
+    group system
+    disabled
+
 service energy-awareness /vendor/bin/energy-awareness
     class main
     user system
