sdm660-common: Fix camera in zangyapro
 CDSP is needed in this SoC due to IA.

Change-Id: Ibca3f8b36fa39b31d76c1a253a7e4f3e3ae0c369

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -344,6 +344,12 @@ on boot
     # Create hvdcp_opti directory
     mkdir /mnt/vendor/persist/hvdcp_opti 0770 root system
 
+service vendor.cdsprpcd /vendor/bin/cdsprpcd
+    class main
+    user system
+    group system
+    disabled
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
