sdm660-common: Fix 660 camera
 CDSP is needed in this sock due to IA.

Change-Id: Ibca3f8b36fa39b31d76c1a253a7e4f3e3ae0c369

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -943,6 +943,11 @@ service adsprpcd /vendor/bin/adsprpcd audiopd
     user media
     group media
 
+service cdsprpcd /vendor/bin/cdsprpcd
+    class main
+    user system
+    group system
+
 service energy-awareness /vendor/bin/energy-awareness
     class main
     user system
