sdm660-common: Fix class_main.sh on decrypt
Change-Id: I22f11c9a661445a945e79609cb2999033b07b049

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -515,3 +515,8 @@ service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
 #   class main
 #   user system
 #   group system
+
+# vold restart
+on property:vold.decrypt=trigger_restart_framework
+    start qcom-c_main-sh
+    start config_bt_addr
