--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1166,10 +1166,10 @@ on property:init.svc.surfaceflinger=restarting
 on property:vendor.display.lcd_density=*
     setprop ro.sf.lcd_density ${vendor.display.lcd_density}
 
-service time_daemon /system/vendor/bin/time_daemon
-    class main
-    user root
-    group root
+#service time_daemon /system/vendor/bin/time_daemon
+#    class main
+#    user root
+#    group root
 
 #service vendor.vppservice /vendor/bin/vppservice
 #    class main
