--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -598,8 +598,8 @@ service vendor.sensors.qti /vendor/bin/sensors.qti
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
 # but only if ro.data.large_tcp_window_size property is set.
-on property:ro.data.large_tcp_window_size=true
-    write /proc/sys/net/ipv4/tcp_adv_win_scale  2
+#on property:ro.data.large_tcp_window_size=true
+#    write /proc/sys/net/ipv4/tcp_adv_win_scale  2
 
 on property:sys.sysctl.tcp_adv_win_scale=*
     write /proc/sys/net/ipv4/tcp_adv_win_scale ${sys.sysctl.tcp_adv_win_scale}
@@ -851,9 +851,9 @@ service vendor.wigig_hostapd /vendor/bin/hw/hostapd -dd  -j wigighostapd /data/v
 #on property:persist.ims.regmanager.mode=1
 #    start ims_regmanager
 
-on property:ro.data.large_tcp_window_size=true
-    # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
-    write /proc/sys/net/ipv4/tcp_adv_win_scale  2
+#on property:ro.data.large_tcp_window_size=true
+#    # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
+#    write /proc/sys/net/ipv4/tcp_adv_win_scale  2
 
 #service battery_monitor /system/bin/battery_monitor
 #    user system
