--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -100,7 +100,7 @@ on boot
     mkdir /data/vendor/camera 0771 camera camera
 
 #Load WLAN driver
-   insmod /vendor/lib/modules/qca_cld3_wlan.ko
+#   insmod /vendor/lib/modules/qca_cld3_wlan.ko
 
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "rndis_bam"
