--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -202,7 +202,7 @@ service adsprpcd_root /vendor/bin/adsprpcd
    user media
    group media
 
-service adsprpcd /vendor/bin/adsprpcd audiopd
+service vendor.adsprpcd /vendor/bin/adsprpcd audiopd
    class main
    user media
    group media
